Bug 314433 - Can't dismiss search box with Esc after opening Watched Nicks
Summary: Can't dismiss search box with Esc after opening Watched Nicks
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: inputline (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-04 20:42 UTC by Nicolás Alvarez
Modified: 2013-02-06 01:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolás Alvarez 2013-02-04 20:42:58 UTC
Despite the fix for #267760, pressing Esc to close the search box still gives the "'Esc' is an ambiguous shortcut" message in some situations. I tracked it down: it happens if I open the Watched Nicks window while the search box is open.

Steps to reproduce:
- Open the search box (Ctrl-F).
- Open the Watched Nicks window (for example, by pressing F4, usually accidentally while intending to hit F3). The search input field doesn't lose focus.
- Press Esc. An "ambiguous shortcut" popup appears.
Comment 1 Bernd Buschinski 2013-02-05 00:14:49 UTC
Only reproduceable if
[ ] Focus new tabs 
is unchecked.
otherwise the search box looses the focus on F4 press
Comment 2 argonel 2013-02-06 01:27:14 UTC
Git commit 3e9bde736224f6646c070a5a8cd5ae5b0274f37f by eli mackenzie.
Committed on 06/02/2013 at 02:12.
Pushed by argonel into branch 'master'.

Squelch spurious "Ambiguous Shortcut" warning

SearchBar manages the shortcut for ESC, but does it in a way that
ViewContainer can't account for. If Focus New Tabs is not enabled,
the ViewContainer will reset the action's status without informing
SearchBar.

Now ViewContainer will send an event through the event-filter managing
the shortcut so that it can deactivate the aciton, avoiding the error
popup.

M  +21   -4    src/viewer/searchbar.cpp
M  +8    -1    src/viewer/viewcontainer.cpp

http://commits.kde.org/konversation/3e9bde736224f6646c070a5a8cd5ae5b0274f37f